kubernetes/backoffice/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backoffice
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backoffice
  template:
    metadata:
      labels:
        app: backoffice
    spec:
      containers:
        - name: backoffice
          image: yuvadius/backoffice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
