kubernetes/backoffice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backoffice
  namespace: dev
spec:
  selector:
    app: backoffice
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
